<resources>
    <string name="app_name">Amar Flat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agreement">By pressing Submit You are agreed to our terms and condition</string>
    <string name="Open_Drawer">Open drawer</string>
    <string name="Close_Drawer">Close drawer</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="update_profile">Update Profile</string>
    <string name="rent_question_text">Looking to sell or rent out your property?</string>
    <string name="log_out">Log Out</string>
    <string name="all_cities">All Cities</string>
    <string name="hint_your_name">Your Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="unit_phone_number">Phone Number</string>
    <string name="btn_text_submit">Submit</string>
    <string name="btn_text_login">LogIn</string>
    <string name="or">OR</string>
    <string name="ask_us_anything">Ask Us Anything</string>
    <string name="your_message">Your Message</string>
    <string name="send">Send</string>
    <string name="give_us_a_call">GIVE US A CALL</string>
    <string name="feel_free_to_give_us_jingle_on_the_following_number">Feel free to give us jingle on the following number.</string>
    <string name="meet_with_us">Meet With US</string>
    <string name="we_encourage_you_to_come_down_and_visit_us_because_as_much_as_we_love_phones_and_computers_we_don_t_think_they_can_ever_be_as_awesome_as_we_are_in_person">We encourage you to come down and visit us because as much as we love phones and computers, we don\'t think they can ever be as awesome as we are in person.</string>
    <string name="feni_office">Feni Office</string>
    <string name="address_chittagong">Feni, Chitagong \n Bangladesh</string>
    <string name="home">Home</string>
    <string name="add_property">Add Property</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact us</string>
    <string name="language_en">Language English</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="area">Area</string>
    <string name="done">Done</string>
    <string name="purpose">Purpose</string>
    <string name="sell">Sell</string>
    <string name="rent">Rent</string>
    <string name="post_a_property">Post a Property</string>
    <string name="select_property_type">Select Property Type</string>
    <string name="select_location">Select Location</string>
    <string name="area_size">Area Size</string>
    <string name="enter_area_size">Enter area size</string>
    <string name="area_is_required">*Area is required</string>
    <string name="total_price">Total Price</string>
    <string name="price_is_required">*Price is required</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="property_title">Property Title</string>
    <string name="hint_enter_title">Enter Title</string>
    <string name="error_title_minimum_5_character_required">*Title minimum 5 character required</string>
    <string name="property_description">Property Description</string>
    <string name="describe_your_property_in_detail">Describe your property in detail</string>
    <string name="error_minimum_5_character_is_required">*Minimum 5 character is required</string>
    <string name="property_features">Property Features</string>
    <string name="hint_describe_your_property_in_detail">Describe your property in detail</string>
    <string name="hint_upload_images_of_your_property">Upload images of your property</string>
    <string name="add_image">Add Image</string>
    <string name="error_email_is_required">*email is required</string>
    <string name="post_ad">Post Ad</string>
    <string name="name">Name</string>
    <string name="filter">Filters</string>
    <string name="i_want_to">I want to</string>
    <string name="buy">Buy</string>
    <string name="city">City</string>
    <string name="open_map">Open Map</string>
    <string name="price_range">Price Range</string>
    <string name="_0">0</string>
    <string name="to">To</string>
    <string name="any">Any</string>
    <string name="area_range">Area Range</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5 +</string>
    <string name="reset">Reset</string>
    <string name="show_all_ads">Show all ads</string>
    <string name="homes_for_rent">Homes for Rent</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="individual">Individual</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="saved_searches">Saved Searches</string>
    <string name="favourites">Favourites</string>
    <string name="my_properties">My Properties</string>
    <string name="drafts">Drafts</string>
    <string name="my_searches">My Searches</string>
    <string name="post_an_ad">Post an Ad</string>
    <string name="house_for_rent">House For Rent</string>
    <string name="sms">SMS</string>
    <string name="call">Call</string>
    <string name="project">Project</string>
    <string name="recent_search">Recent Search</string>
    <string name="new_projects">New Projects</string>
    <string name="new_services">New Services</string>
    <string name="view_all">View All</string>
    <string name="latest_blogs">Latest Blogs</string>
    <string name="property_tv">Property Tv</string>
</resources>