<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"
            />
        <item
            android:id="@+id/nav_add_property"
            android:title="@string/add_property"
            android:icon="@drawable/project_icon"
            />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search"
            />
        <item
            android:id="@+id/nav_settings"
             android:title="@string/setting"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/nav_contact"
            android:title="@string/contact_us"
            android:icon="@drawable/ic_contact"
            />
        <item android:id="@+id/nav_language"
            android:title="@string/language_en"
            android:icon="@drawable/ic_language"
            />
    </group>
    <item android:title="@string/more">
        <menu>
            <item android:id="@+id/about"
                android:title="@string/about"
                android:icon="@drawable/ic_info"
                />
        </menu>
    </item>
</menu>