<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/post_add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/back_arrow"
            app:title="Contact Us"
            app:titleTextColor="@color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:background="@color/black"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:text="@string/ask_us_anything"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="We at amarflat.com are open to any and all inquiries and suggestions you may have. The occasional hilarious joke wouldn't be entrirely amiss either."
                        />
                </LinearLayout>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:hint="@string/hint_your_name"
                    android:textColorHint="@color/white"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:hint="@string/hint_email_address"
                    android:textColorHint="@color/white"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:background="@android:color/holo_blue_dark"
                        android:textColorHint="@color/white"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpg_text_phone"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="4"
                        android:textColorHint="@color/white"
                        android:hint="@string/unit_phone_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_border"
                        android:hint="@string/your_message"
                        android:textColorHint="@color/white"
                        android:id="@+id/message"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="messageSend"
                    android:text="@string/send"
                    android:textColor="@color/black" />
            </LinearLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginVertical="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:text="@string/give_us_a_call"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feel_free_to_give_us_jingle_on_the_following_number"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Shafin"
                        android:textAllCaps="true"
                        android:layout_marginVertical="10dp"
                        android:textSize="17dp"
                        android:textAlignment="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="019XXXXXXXX"
                        android:textColor="@color/primary"
                        android:paddingVertical="6dp"
                        android:textAlignment="center"
                        android:textSize="17dp"
                        android:background="@drawable/transparent_button"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mahamudul"
                        android:textAllCaps="true"
                        android:layout_marginVertical="10dp"
                        android:textSize="17dp"
                        android:textAlignment="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="018XXXXXXXX"
                        android:textColor="@color/primary"
                        android:paddingVertical="6dp"
                        android:textAlignment="center"
                        android:textSize="17dp"
                        android:background="@drawable/transparent_button"/>
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginVertical="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:text="@string/meet_with_us"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/we_encourage_you_to_come_down_and_visit_us_because_as_much_as_we_love_phones_and_computers_we_don_t_think_they_can_ever_be_as_awesome_as_we_are_in_person"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feni_office"
                        android:textAllCaps="true"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:textColor="@color/primary"
                        android:textAlignment="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address_chittagong"
                        android:paddingVertical="6dp"
                        android:textAlignment="center"
                        android:textSize="17sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>