<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/headBar"
        android:background="@color/black"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/white"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recent_search"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:paddingStart="8dp"
                        android:paddingVertical="5dp"
                        android:background="@drawable/bottom_border"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/item_recent_search"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/postAdButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:elevation="8dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/white"
                app:contentPadding="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <TextView
                        android:drawableStart="@drawable/ic_vector_post_ad"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/rent_question_text" />

                    <Button
                        android:id="@+id/home_ad_post_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@color/primary_transparent"
                        android:text="@string/post_an_ad"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textAllCaps="false"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/white"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4"
                        android:background="@drawable/bottom_border"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="@string/new_projects"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:paddingStart="8dp"
                            android:paddingVertical="5dp"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="View All"
                            android:textAllCaps="true"
                            android:paddingEnd="8dp"
                            android:textSize="15sp"
                            android:textColor="@android:color/holo_blue_light"
                            android:paddingStart="8dp"
                            android:paddingVertical="5dp"
                            android:gravity="end"
                            />
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/item_recent_search"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/white"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4"
                        android:background="@drawable/bottom_border"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="@string/new_services"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:paddingStart="8dp"
                            android:paddingVertical="5dp"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="@string/view_all"
                            android:textAllCaps="true"
                            android:paddingEnd="8dp"
                            android:textSize="15sp"
                            android:textColor="@android:color/holo_blue_light"
                            android:paddingStart="8dp"
                            android:paddingVertical="5dp"
                            android:gravity="end"
                            />
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/item_recent_search"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/white"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4"
                        android:background="@drawable/bottom_border"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="@string/latest_blogs"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:paddingStart="8dp"
                            android:paddingVertical="5dp"
                            android:background="@drawable/bottom_border"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="@string/view_all"
                            android:textAllCaps="true"
                            android:paddingEnd="8dp"
                            android:textSize="15sp"
                            android:textColor="@android:color/holo_blue_light"
                            android:paddingStart="8dp"
                            android:paddingVertical="5dp"
                            android:gravity="end"
                            />
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/item_recent_search"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/white"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4"
                        android:background="@drawable/bottom_border"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="@string/property_tv"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:paddingStart="8dp"
                            android:paddingVertical="5dp"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="@string/view_all"
                            android:textAllCaps="true"
                            android:paddingEnd="8dp"
                            android:textSize="15sp"
                            android:textColor="@android:color/holo_blue_light"
                            android:paddingStart="8dp"
                            android:paddingVertical="5dp"
                            android:gravity="end"
                            />
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/item_recent_search"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>